// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress demo -- base 1`] = `
.c16 {
  height: 8px;
}

.c17 {
  width: 100%;
  height: 100%;
  border: 1px solid #c3cad9;
  border-radius: 6px;
  background: #fff;
}

.c18 {
  background: #4683e6;
  height: 100%;
  border-radius: 6px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  width: 10%;
}

.c19 {
  position: absolute;
  right: 0;
  top: -17px;
}

.c20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.c20:before,
.c20:after {
  content: ' ';
  display: table;
}

.c20:after {
  clear: both;
}

.c21 {
  float: right;
}

.c10 {
  vertical-align: baseline;
}

.c13 {
  position: relative;
}

.c15 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c9:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c7 .c14 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c14::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7:hover {
  border-color: #c3cad9;
}

.c7 .c12 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c7 .c12:hover {
  background: #f6f6fb;
}

.c7 .c14 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c7 .c8,
.c7 .c11 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c11:hover {
  color: #3860f4;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c7 .c11 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px;"
  >
    <div>
      <div
        class="c16"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <span
              class="c19"
            >
              10%
            </span>
          </div>
        </div>
      </div>
      <span
        class="c20"
      >
        <span>
          0%
        </span>
        <span
          class="c21"
        >
          100%
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- format 1`] = `
.c16 {
  height: 8px;
}

.c17 {
  width: 100%;
  height: 100%;
  border: 1px solid #c3cad9;
  border-radius: 6px;
  background: #fff;
}

.c18 {
  background: #4683e6;
  height: 100%;
  border-radius: 6px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  width: 10%;
}

.c19 {
  position: absolute;
  right: 0;
  top: -17px;
}

.c20 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.c20:before,
.c20:after {
  content: ' ';
  display: table;
}

.c20:after {
  clear: both;
}

.c21 {
  float: right;
}

.c10 {
  vertical-align: baseline;
}

.c13 {
  position: relative;
}

.c15 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c9:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c7 .c14 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c14::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7:hover {
  border-color: #c3cad9;
}

.c7 .c12 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c7 .c12:hover {
  background: #f6f6fb;
}

.c7 .c14 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c7 .c8,
.c7 .c11 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c11:hover {
  color: #3860f4;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c7 .c11 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px;"
  >
    <div>
      <div
        class="c16"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <span
              class="c19"
            >
              10.00%
            </span>
          </div>
        </div>
      </div>
      <span
        class="c20"
      >
        <span>
          0.00%
        </span>
        <span
          class="c21"
        >
          100.00%
        </span>
      </span>
    </div>
  </div>
</div>
`;
